proc_macro1/crates/function-like/tests/ui/compile_fail.stderr
error: expected string literal
 --> tests/ui/compile_fail.rs:2:35
  |
2 |     function_like::function_like!(123);
  |                                   ^^^
