proc_macro1/crates/function-like/tests/ui/compile_fail.rs
fn main() {
    function_like::function_like!(123);
}
